# isabel-wiki

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE-CONTENT.md  README.md  ROADMAP.md  compile_book.py  index.md  log.md  pdf_to_md.sh  pyproject.toml  quartz.config.ts  quartz.layout.ts  yt.sh
.claude/: settings.json
.claude/hooks/: inject-rules.py  lint-on-edit.py
.claude/rules/: busca-qmd.md  convencoes-aliases.md  convencoes-direitos.md  convencoes-frontmatter.md  convencoes-merge.md  convencoes-paginas.md  convencoes-palestras.md  convencoes-slides.md  convencoes-tags.md  regra-divergencia.md  scripts.md
.github/workflows/: deploy-wiki.yml  lint-pr.yml  stats-daily.yml
.obsidian/: graph.json
data/: dicionario.json  kardec-mapping.json  revista-espirita-mapping.json
quartz-overrides/components/: Footer.tsx
raw/biblia-acf/: index.md
raw/mediuns/: a-caminho-da-luz.md  entre-a-terra-e-o-ceu.md  evolucao-em-dois-mundos.md  vida-e-sexo.md
raw/palestras/: JESUS ENSINA EM CAFARNAHUM | EELDE.md  Lições da vida - Divaldo Franco.md  Vencendo o vazio existencial - Divaldo Franco (Palestra Espírita).md  (+2 more)
scripts/: audit_qmd_usage.py  backfill_direitos.py  build_kardec_mapping.py  crawl_biblia_acf.py  download_revista_espirita.py  enrich_tags_autor.py  enrich_tags_grau.py  enrich_tags_lei.py  enrich_tags_obra.py  generate_obra_index.py  inject_copyright.py  land-to-main.sh  link_citations.py  list_pending_ingest.py  serve-local.sh  split_revista_espirita.py  wrap_glossary_terms.py
slides/: .gitignore  README.md
tests/: test_link_citations.py
wiki/: index.md
(+2000 files in other folders)
